--- a/gen_ai_day2.ipynb
+++ b/gen_ai_day2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMEWqy/1UcFAdEJFtGVBrd1",
+      "authorship_tag": "ABX9TyNF55laappPfrmH3AebVY7g",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5163,15 +5163,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "Save ouput to file"
-      ],
-      "metadata": {
-        "id": "8LNiXe7yRH3_"
-      }
-    },
-    {
       "cell_type": "code",
       "execution_count": 3,
       "metadata": {
@@ -5208,6 +5199,7 @@
         }
       ],
       "source": [
+        "# save output to file\n",
         "from transformers import pipeline\n",
         "import os\n",
         "\n",
@@ -5238,17 +5230,9 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "Auto-name files"
-      ],
-      "metadata": {
-        "id": "7J5_NOc4Q_J3"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
+        "# Auto-name files\n",
         "from transformers import pipeline\n",
         "import os\n",
         "\n",
@@ -5493,17 +5477,9 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "improving the ouput"
-      ],
-      "metadata": {
-        "id": "xaE24k2zW3nd"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
+        "# improving the output\n",
         "from transformers import pipeline\n",
         "import os\n",
         "\n",
